--- a/1.html
+++ b/1.html
@@ -1,1 +1,164 @@
-<a href="https://cdn.jsdelivr.net/gh/adcys/adcys@main/README.md" target="_blank">https://cdn.jsdelivr.net/gh/adcys/adcys@main/README.md</a>
+
+<!DOCTYPE HTML>
+<html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<meta http-equiv="Cache-Control" content="no-transform" />
+<meta name="keywords" content="在线网页编辑器,在线编辑网页,在线编辑HTML,网页编辑器,HTML网页编辑器" />
+<meta name="description" content="网页编辑器" />
+<title>在线网页编辑器全功能版 - 在线HTML编辑器 - 在线DW</title>
+<script>cache_sjs="20031912";sj_jie_mian="0";</script>
+<link href="//f.bmcx.com/img/css/style.css?v=c2c606e890f506c3_17825" rel="stylesheet" type="text/css" />
+<script src="//f.bmcx.com/img/js/js.js?v=1bf99e089b575f31_11119"></script>
+<script src="//f.bmcx.com/g/data/data.js?v=d3638da9bdb290bb_6010"></script>
+<script aysnc="aysnc" src="//f.7x24s.com/public/sweetalert/sweetalert.min.js?v=4d5f1d03dd247211_40802"></script>
+<script aysnc="aysnc" src="//f.51240.com/file/user/login/js.js?v=d9c3f41bbccc5a6a_12536"></script>
+<script>all_zhi_xing_js_head();</script>
+</head>
+
+<body>
+<div id="pmk_sj_top" class="pmk_sj_show">
+<a href="javascript:void(0);" onclick="sj_menu_qie_huan()" id="pmk_sj_menu_an_niu">　</a>
+<span>网页编辑器</span>
+</div>
+
+<ul id="pmk_sj_menu" class="pmk_sj_show">
+<li><a href="//www.bmcx.com">首页</a></li>
+<li><a href="javascript:void(0)" onclick="open_Iframe('//user.bmcx.com/web_system/bmcx_com_www/system/file/user/login/iframe_weixin.php', '无按钮');">登录/注册</a></li><li><a href="//about.7x24s.com/contact/">联系我们</a></li>
+</ul>
+
+
+
+
+<div id="top" class="pmk_990_show pmk_1040_show">
+
+<div style="float:left;">
+<a style="color:#363;" href="//www.bmcx.com/api/" target="_blank">接口调用</a>
+<a style="color:#F00;" href="//about.7x24s.com/contact/" target="_blank" rel="nofollow">意见/报错</a>
+</div>
+
+<div style="float:right;">
+<a href="javascript:void(0)" onclick="open_Iframe('//user.bmcx.com/web_system/bmcx_com_www/system/file/user/login/iframe_weixin.php', '无按钮');">登录 / 注册</a> </div>
+
+</div>
+
+
+
+
+<div id="main">
+
+
+<div id="top_logo" class="pmk_990_show pmk_1040_show">
+<a href="//www.bmcx.com/"><img id="top_logo_img" src="//f.bmcx.com/img/logo.png?v=8230ce021585c79d_5874" alt="便民查询网 - bmcx.com - 在线查询 - 实用工具" /></a>
+<div id="ggwz___1" class="pmk_990_show pmk_1040_show top_ggwz"><script>ggdm_duqu("ggwz___1", "468x60");</script></div>
+</div>
+
+<script>try{parent.dingbu_shezhi();}catch (e){}</script>
+
+
+
+
+<div class="kuang" style="margin-bottom: 8px;">
+<div id="main_title" class="kuang_title">
+<span id="main_shouye_anniu" style="float: left;"><a href="//www.bmcx.com/">首页</a><span class="main_title_gt">&gt;</span></span>
+<a href="//zaixianwangyebianji.bmcx.com/" id="main_anniu">网页编辑器</a></div>
+
+
+<div id="main_content"><script charset="utf-8" src="//f.bmcx.com/file/zaixianwangyebianji/kindeditor-4.1.7/kindeditor-min.js"></script>
+<script charset="utf-8" src="//f.bmcx.com/file/zaixianwangyebianji/kindeditor-4.1.7/lang/zh_CN.js"></script>
+<script>
+		KindEditor.ready(function(K) {
+				K.create('#content', {
+					items : ['source', '|', 'undo', 'redo', '|', 'preview', 'print', 'code', 'cut', 'copy', 'paste','plainpaste', 'wordpaste', '|', 'justifyleft', 'justifycenter', 'justifyright','justifyfull', 'insertorderedlist', 'insertunorderedlist', 'indent', 'outdent', 'subscript','superscript', 'clearhtml', 'quickformat', 'selectall', '|', 'fullscreen', '/','formatblock', 'fontname', 'fontsize', '|', 'forecolor', 'hilitecolor', 'bold','italic', 'underline', 'strikethrough', 'lineheight', 'removeformat', '|', 'image','flash', 'media', 'table', 'hr', 'emoticons', 'baidumap', 'pagebreak','anchor', 'link', 'unlink'],
+					allowImageUpload : false,
+					allowMediaUpload : false,
+					allowFlashUpload : false
+				});
+		});
+</script>
+
+<textarea name="content" id="content" style="width:99%;height:800px;visibility:hidden;display:block;"></textarea>
+
+<h2 class="xiaoshuomingkuang_biaoti">关于HTML编辑器</h2>
+<div class="xiaoshuomingkuang_neirong">　　这是一个在线的HTML编辑器，如果你所用的电脑，没有装有网页编辑软件，可以用这个代替。^_^</div></div>
+</div>
+
+
+<div id="ggwz___2" class="kuang pmk_990_show pmk_1040_show" style="height:92px;"><script>ggdm_duqu("ggwz___2", "970x90");</script></div>
+
+
+<div id="ggwz___3" class="pmk_990_show" style="height:52px;margin-top:8px;"><script>ggdm_duqu("ggwz___3", "990x52");</script></div>
+<div id="ggwz___4" class="pmk_1040_show" style="height:52px;margin-top:8px;"><script>ggdm_duqu("ggwz___4", "1040x52");</script></div>
+
+
+
+
+<div id="ggwz___5" class="pmk_sj_show" style="margin-top:4px;clear:both;"><script>ggdm_duqu("ggwz___5", "20bi20");</script></div>
+
+
+
+
+
+<script type="text/javascript">try{parent.zhongbu_shezhi();}catch (e){}</script>
+
+<script>all_zhi_xing_js();</script>
+
+
+<div id="bottom_fjxx">
+<div class="kuang pmk_990_show pmk_1040_show" style="margin-top:8px;"><div class="kuang_title">随机推荐查询工具</div><div style="padding: 5px;line-height: 18px;"><a href="//jisuanqi.bmcx.com/" target="_blank">公式计算器</a> <a href="//kuaidichaxun.bmcx.com/" target="_blank">快递查询</a> <a href="//yinghancidian.bmcx.com/" target="_blank">英汉词典</a> <a href="//peisegongju.bmcx.com/" target="_blank">配色工具</a> <a href="//changyongdianhuahaoma.bmcx.com/" target="_blank">常用电话号码</a> <a href="//huobiduihuan.bmcx.com/" target="_blank">货币汇率兑换</a> <a href="//weilaishijian.bmcx.com/" target="_blank">未来时间查询</a> <a href="//suijimimashengcheng.bmcx.com/" target="_blank">随机密码生成</a> <a href="//bbs.bmcx.com/" target="_blank">论坛转贴工具</a> <a href="//jinzhi.bmcx.com/" target="_blank">进制转换</a> <a href="//fanjianhuzhuan.bmcx.com/" target="_blank">简繁互转</a> <a href="//zhongwenzhuanpinyin.bmcx.com/" target="_blank">中文转拼音</a> <a href="//zaixianpinyinshuru.bmcx.com/" target="_blank">在线拼音输入法</a> <a href="//zaixianwubishuru.bmcx.com/" target="_blank">在线五笔输入法 86版</a> <a href="//chuantongzhongwenpaiban.bmcx.com/" target="_blank">文字竖排</a> <a href="//zaixianjisuanqi.bmcx.com/" target="_blank">在线计算器</a> <a href="//gerensuodeshui.bmcx.com/" target="_blank">个税计算器</a> <a href="//danweihuansuan.bmcx.com/" target="_blank">体积容积换算</a> <a href="//md5jiami.bmcx.com/" target="_blank">MD5在线加密</a> <a href="//xuexing.bmcx.com/" target="_blank">子女血型查询</a> <a href="//escape.bmcx.com/" target="_blank">Escape 加密/解密</a> <a href="//yumingshanchu.bmcx.com/" target="_blank">域名删除查询</a> <a href="//zhengze.bmcx.com/" target="_blank">正则表达式检测</a> <a href="//yumingsuoxie.bmcx.com/" target="_blank">国家域名缩写</a> <a href="//jsmin.bmcx.com/" target="_blank">JS代码压缩</a> <a href="//htmltojs.bmcx.com/" target="_blank">Html/Js 互转</a> <a href="//gounianling.bmcx.com/" target="_blank">狗年龄计算</a> <a href="//maonianling.bmcx.com/" target="_blank">猫年龄计算</a> <a href="//qinshuguanxi.bmcx.com/" target="_blank">中国主要亲属关系简表</a> <a href="//qicheyouhao.bmcx.com/" target="_blank">汽车油耗计算</a> <a href="//jtwz.bmcx.com/" target="_blank">交通违章查询</a> <a href="//robots.bmcx.com/" target="_blank">robots.txt 生成器</a> <a href="//yuansuzhouqibiao.bmcx.com/" target="_blank">元素周期表</a> <a href="//lishichaodaigongyuanduizhaojianbiao.bmcx.com/" target="_blank">历史朝代公元对照简表</a> <a href="//wendu.bmcx.com/" target="_blank">温度单位换算</a> <a href="//kalulixiaohao.bmcx.com/" target="_blank">卡路里消耗</a> （<a href="//www.bmcx.com/" target="_blank">查看全部</a>）</div></div></div>
+
+
+
+<div class="kuang pmk_sj_show pmk_api_none" id="pmk_sj_hddb">
+欢迎关注微信公众号：<span class="lvse">便民查询网</span><br>
+<img src="//f.bmcx.com/img/weixin.png?v=3f8618a4d89945f3_3773" width="100" height="100"><br>
+1、长按上方二维码，保存至手机相册；<br>
+2、进微信扫一扫，从相册中选择识别二维码。
+</div>
+<div class="pmk_sj_show pmk_api_none" id="pmk_sj_lxwm"><a href="//about.7x24s.com/contact/" rel="nofollow">联系我们</a></div>
+
+
+</div>
+
+
+
+
+
+
+
+<div id="bottom_top" class="pmk_990_show pmk_1040_show">
+<a href="//www.bmcx.com/api/" target="_blank">接口调用</a>
+|
+<a href="//about.7x24s.com/contact/" target="_blank" rel="nofollow">意见建议</a>
+</div>
+
+
+
+
+
+
+
+<div id="bottom" class="pmk_990_show pmk_1040_show">
+CopyRight &copy; 2004-2021 <a href="//www.bmcx.com/">便民查询网</a> All Rights Reserved<br /><a href="https://beian.miit.gov.cn/" target="_blank" rel="nofollow">闽ICP备2020022420号-1</a><br>
+<a href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=35011102350673" target="_blank" rel="nofollow"><img src="//f.7x24s.com/public/img/beian_gov_cn.png" style="vertical-align:middle;margin-right:5px;">闽公网安备 35011102350673号</a>
+</div>
+
+
+
+<script>try{parent.dibu_shezhi();}catch (e){}</script>
+
+
+
+
+<script>jie_mian_qie_huan();</script>
+
+
+
+
+<script>xuan_ting("main_left", "main_right_zi");</script>
+
+<div style="display:none"><script src="//f.bmcx.com/tongji/bmcx.com.js?v=c6924e8a9bacd56d_530"></script></div>
+</body>
+</html>
+<!-- 172.16.27.63 |-ok-| -->
